--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,10 @@ dependencies {
     compile group: 'org.testng', name: 'testng', version: '6.8.8'
 }
 
+task wrapper(type: Wrapper) {
+    gradleVersion = '3.4.1'
+}
+
 test{
     useTestNG()
     options.suites("testng.xml")
