Add support with jenkins

--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,11 @@ task wrapper(type: Wrapper) {
 }
 
 test{
+
+    testLogging {
+        events "standardOut"
+    }
+
     useTestNG() {
         //set TestNG output dir
         outputDirectory = file("testngOutput")
