--- a/build.gradle
+++ b/build.gradle
@@ -48,6 +48,6 @@ test{
         outputDirectory = file("testngOutput")
         reports.html.enabled = false
         useDefaultListeners = true
-        suites 'testng.xml'
+        suites 'ios_fast.xml'
     }
 }
