change the cloud url

--- a/cloud.properties
+++ b/cloud.properties
@@ -1,5 +1,5 @@
 #Thu Jun 15 11:35:01 IDT 2017
-url=http\://localhost:9192
+url=https\://stage.experitest.com
 password=nivi1Admin
 project=Default
 username=admin
